fixed footer align

--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -93,19 +93,19 @@
     .footer__grid {
         display: flex;
         flex-direction: column;
-        align-items: flex-start;
+        align-items: center;
         justify-content: center;
         grid-gap: 10px;
         margin-bottom: 20px;
     }
 
     .footer__title {
-        text-align: left;
+        text-align: center;
         margin-bottom: 5px;
     }
 
     .footer__block {
-        text-align: left;
+        text-align: center;
         overflow: hidden;
     }
 
@@ -116,6 +116,6 @@
     .footer__block--flex {
         display: flex;
         flex-direction: column;
-        align-items: flex-start;
+        align-items: center;
     }
 }
