--- a/components/Navigation/Navigation.module.css
+++ b/components/Navigation/Navigation.module.css
@@ -34,7 +34,7 @@
 .navigation__submenu {
     visibility: hidden;
     opacity: 0;
-    width: 300px;
+    width: auto;
     position: absolute;
     border-radius: 30px;
     z-index: 12;
@@ -101,6 +101,7 @@
 
 .navigation__item--child {
     padding: 0;    
+    white-space: nowrap;
 }
 
 .navigation__item--disabled {
